test/semantic_errors/type_mismatch.lat
// Test: Type mismatch in assignment
// Expected error: Cannot assign 'float' to 'integer'

munus main() {
    x: integer = 3.14
}
